CHANGES
=======

0.1.3
-----
* task "workers" attribute to set number of worker threads

0.1.2
-----
* reverse task stop order
* improved ipv6 / multi-if support for HTTP
* twisted reactor, base twisted tasks
* re-generate (fb303) thrift bindings during setup.py build
* argparse instantiation tweaks
* serveBG() service method
* added unittests